--- a/WomansWorld/Base.lproj/Main.storyboard
+++ b/WomansWorld/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Whoever thought this was a man's world clearly hasn't been paying any attention..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9RT-yh-9Ms">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Whoever thought this was a man's world clearly hasn't been paying attention..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9RT-yh-9Ms">
                                 <rect key="frame" x="31" y="646" width="359" height="228"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="24"/>
@@ -2224,7 +2224,7 @@
         <segue reference="yc6-gB-8tG"/>
         <segue reference="J7m-GD-tXZ"/>
         <segue reference="r5a-Aa-TDt"/>
-        <segue reference="nKB-52-vfi"/>
+        <segue reference="iLR-V9-g8D"/>
         <segue reference="vZy-Cu-fPh"/>
     </inferredMetricsTieBreakers>
     <resources>
