--- a/WomansWorld/Base.lproj/Main.storyboard
+++ b/WomansWorld/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                                 <rect key="frame" x="36" y="519" width="341" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6sz-Gr-ebl">
                                 <rect key="frame" x="36" y="594" width="341" height="56"/>
@@ -471,7 +471,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClick:" destination="ilo-1U-f11" eventType="touchUpInside" id="Vb6-nl-F76"/>
+                                    <action selector="onClick:" destination="ilo-1U-f11" eventType="touchUpInside" id="7oJ-Hn-3Dd"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Untitled_Artwork 2 copy 2 Small" translatesAutoresizingMaskIntoConstraints="NO" id="vj0-Ao-2p2">
@@ -1553,7 +1553,7 @@
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPt-u7-jsK">
-                                                                        <rect key="frame" x="63" y="24" width="249" height="119"/>
+                                                                        <rect key="frame" x="63" y="48" width="249" height="119"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <attributedString key="attributedText">
                                                                             <fragment content="Oma the Label">
@@ -1572,8 +1572,8 @@
                                                         </subviews>
                                                         <color key="backgroundColor" red="0.86274516580000005" green="0.84705877299999999" blue="0.77254903320000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </view>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="oma-1" translatesAutoresizingMaskIntoConstraints="NO" id="PD2-q3-jEh">
-                                                        <rect key="frame" x="63" y="899" width="249" height="320"/>
+                                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="oma-1" translatesAutoresizingMaskIntoConstraints="NO" id="PD2-q3-jEh">
+                                                        <rect key="frame" x="63" y="935" width="249" height="320"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <gestureRecognizers/>
                                                         <connections>
@@ -2144,7 +2144,7 @@
                                                         </attributedString>
                                                         <color key="highlightedColor" red="0.35686278339999999" green="0.49803921579999999" blue="0.55294120309999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </label>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2022-06-16 at 11.56.26 AM" translatesAutoresizingMaskIntoConstraints="NO" id="C3H-0e-inV">
+                                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2022-06-16 at 11.56.26 AM" translatesAutoresizingMaskIntoConstraints="NO" id="C3H-0e-inV">
                                                         <rect key="frame" x="32" y="79" width="310" height="376"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <gestureRecognizers/>
@@ -2219,13 +2219,13 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="sQR-Uk-JD5"/>
+        <segue reference="pnU-Tj-cy5"/>
         <segue reference="D7M-nH-qZe"/>
         <segue reference="yc6-gB-8tG"/>
-        <segue reference="J7m-GD-tXZ"/>
-        <segue reference="r5a-Aa-TDt"/>
-        <segue reference="iLR-V9-g8D"/>
-        <segue reference="vZy-Cu-fPh"/>
+        <segue reference="42M-mY-SMU"/>
+        <segue reference="3uk-ej-Vf5"/>
+        <segue reference="KKX-08-jTV"/>
+        <segue reference="Gyf-bD-s4m"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="040921_mixing_skincare_lead-2000" width="1323" height="1334"/>
